trunk/src/main/resources/au/com/gaiaresources/bdrs/model/theme/themes/vanilla/css/base.css
/*************************************************************************/
/* This CSS file contains the default styling for BDRS vanilla template. */
/* Themed implementations will use their own theme base.css class.       */
/*                                                                       */
/* Styles that change the aesthetics of the page should be added here,   */
/* such as colors, menu, button styling, etc.                            */
/*************************************************************************/

/*******************************************/
/* Default Page Element Styling            */
/*******************************************/
body {
    font-size: ${style.content.font.size};
    font-family: ${style.content.font};
    line-height: ${style.content.line-height};
    color: ${style.content.text.color};
    background-color: ${style.body.background.color};
    margin: 0px;
    padding: 0px;
    display: block;
}

.wrapper {
    width: ${style.content.width};
}

/************************************/
/* Font styling for text inputs     */
/************************************/

/* this needs to be defined separately or we don't properly override the
 * yui resets due to css specificity
 */
input, select, textarea {
    font-family: ${style.content.font};
}


/* On IE9 on the it appears the text and password
 * input types are of different heights if left to
 * the defaults.
 */
input[type=text],input[type=password] {
	height: 14px;
}

/***********************************************/
/* Button Styling                              */
/* restyle jquery buttons - class is ui-button */
/***********************************************/

input[type=submit],input[type=button],
button[type=button].ui-button {
    color: ${style.form.button.color};
    font-weight: bold;
    margin: 0px 8px 0px 8px;
    padding: 4px 16px 4px 16px;
    font-size: 1em;
    cursor: pointer;
	/* fixes long buttons in IE7 */
    overflow: visible;
    
    /* Rounded Border */
    border: 1px solid ${style.form.button.border.color};
    -webkit-border-radius: 6px;
    -khtml-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

.ui-button .ui-button-text { 
    display: block; 
	line-height: normal;
	font-size: 12px;
	height: auto;
	padding: 0;
	margin: 0;
}

input[type=submit][disabled].form_action,
input[type=button][disabled].form_action,
input[type=submit][disabled].form_action:active,
input[type=button][disabled].form_action:active,
input[type=submit][disabled].form_action:hover,
input[type=button][disabled].form_action:hover {
    background-image: none;
    background-color: ${style.form.button.disabled.background.color};
    border: 1px solid ${style.form.button.disabled.border.color};
    cursor: default;
}

/* Form Actions */
input[type=submit].form_action,input[type=button].form_action,
button[type=button].ui-button {
    /* Fallback */
    background-color: ${style.form.button.gradient.color.top};
    
	/* Background svg for IE9 */
	background: ${style.form.button.gradient.color.top} url(${asset}/css/buttonGradient.svg) 0 0 no-repeat;

    /* Color Gradient */
    background: -moz-linear-gradient(top, ${style.form.button.gradient.color.top}, ${style.form.button.gradient.color.bottom});
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, ${style.form.button.gradient.color.top}),
        color-stop(1, ${style.form.button.gradient.color.bottom}) );
	background: linear-gradient(top, ${style.form.button.gradient.color.top}, ${style.form.button.gradient.color.bottom});
		
    /* Drop Shadow */
    box-shadow: 0px 0px 2px ${style.form.button.shadow.color};
    -moz-box-shadow: 0px 0px 2px ${style.form.button.shadow.color};
    -webkit-box-shadow: 0px 0px 2px ${style.form.button.shadow.color};
}

input[type=submit].form_action:hover,input[type=button].form_action:hover,
button[type=button].ui-button:hover { 
    /* Fallback */
    background-color: ${style.form.button.hover.gradient.color.top};
    
	/* Background svg for IE9 */
	background: ${style.form.button.hover.gradient.color.top} url(${asset}/css/buttonGradientHover.svg) 0 0 no-repeat;

    background: -moz-linear-gradient(top, ${style.form.button.hover.gradient.color.top}, ${style.form.button.hover.gradient.color.bottom});
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, ${style.form.button.hover.gradient.color.top}),
        color-stop(1, ${style.form.button.hover.gradient.color.bottom}) );
}

input[type=submit].form_action:active,
input[type=button].form_action:active,
input[type=submit].form_action:focus,
input[type=button].form_action:focus,
button[type=button].ui-button:active,
button[type=button].ui-button:focus {
    background-image: none;
    background-color: ${style.form.button.gradient.color.bottom};
}

.input_container,.input_container_2 {
    padding: 16px 16px 16px 16px;
    /* Rounded Border */
    border: ${style.content.container.border.width} ${style.content.container.border.style} ${style.content.container.border.color};
    -webkit-border-radius: ${style.content.container.border.radius};
    -khtml-border-radius: ${style.content.container.border.radius};
    -moz-border-radius: ${style.content.container.border.radius};
    border-radius: ${style.content.container.border.radius};
}

.input_container { 
    background-color: ${style.content.container.background.color};
    color: ${style.content.container.text.color};
}

.input_container table a {
    color: ${style.anchor.link.color};
}

/****************************************/
/*  Input Styling for non button inputs */
/****************************************/

input[type=text][readonly], 
input[type=password][readonly], 
textarea[readonly],
input[type=text][disabled], 
input[type=password][disabled], 
textarea[disabled] {
    background-color: ${style.input.disabled.color};
}
/* ... */

